# python-project-83

./: .gitignore  Makefile  README.md  config.py  database.sql  pyproject.toml
page_analyzer/: app.py  models.py  test.py  utils.py
page_analyzer/templates/: index.html  page404.html
page_analyzer/templates/urls/: url.html  urls.html
